Fix beneficiary table content alignment

--- a/itez/static/assets/css/vertical-layout-light/style.css
+++ b/itez/static/assets/css/vertical-layout-light/style.css
@@ -19313,7 +19313,7 @@ dl li {
   font-family: Shippori Antique;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 16px;
   color: black;
   padding-top: 20px;
@@ -19327,7 +19327,7 @@ dl li {
 .table.select-table td .h6 {
   font-style: normal;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 18px;
   color: #000000;
   margin-bottom: 5px;
@@ -19335,7 +19335,7 @@ dl li {
 .table.select-table td p {
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 17px;
   line-height: 16px;
   color: #737f8b;
   margin-bottom: 0;
